tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Action_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Action_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user assigned to take action on this interview. Only this user or the escalator can clear the flag.</description>
    <inlineHelpText>The person responsible for addressing this action item.</inlineHelpText>
    <label>Action Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Interview Actions</relationshipLabel>
    <relationshipName>Assigned_Interview_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>