tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Action_Escalated_By__c.field-meta.xml
<CustomField>
    <fullName>Action_Escalated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The supervisor who flagged this interview for action. Can recall the action flag.</description>
    <inlineHelpText>The supervisor who escalated this action item.</inlineHelpText>
    <label>Action Escalated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Escalated Interview Actions</relationshipLabel>
    <relationshipName>Escalated_Interview_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>