tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Action_Notes__c.field-meta.xml
<CustomField>
    <fullName>Action_Notes__c</fullName>
    <description>Notes from the supervisor about what action needs to be taken.</description>
    <inlineHelpText>Details about the action required.</inlineHelpText>
    <label>Action Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>