tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag set by supervisors to indicate this interview needs attention or follow-up.</description>
    <inlineHelpText>Checked when a supervisor has flagged this interview for action.</inlineHelpText>
    <label>Action Required</label>
    <type>Checkbox</type>
</CustomField>