tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Amendment_Count__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this interview has been amended after locking.</description>
    <inlineHelpText>Tracks how many formal amendments have been made to this locked interview.</inlineHelpText>
    <label>Amendment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>