tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/CaseManagement_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>CaseManagement_Not_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Case Management signature was suppressed for this Treatment Plan — the signing clinician marked Case Management as Not Requested.</description>
    <label>Case Management Not Requested</label>
    <type>Checkbox</type>
</CustomField>