tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/CaseManager_Signature_File_Id__c.field-meta.xml
<CustomField>
    <fullName>CaseManager_Signature_File_Id__c</fullName>
    <description>Content Document ID of the Case Manager&apos;s signature file</description>
    <label>Case Manager Signature File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>