tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/CaseManager_Signed__c.field-meta.xml
<CustomField>
    <fullName>CaseManager_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Case Manager has signed this interview/treatment plan</description>
    <label>Case Manager Signed</label>
    <type>Checkbox</type>
</CustomField>