tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/CaseManager_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>CaseManager_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who signed as Case Manager for this interview/treatment plan</description>
    <label>Case Manager Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseManager_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>