tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Client_Signed__c.field-meta.xml
<CustomField>
    <fullName>Client_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Signed</label>
    <type>Checkbox</type>
</CustomField>