tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Client_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Client_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Signed By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interviews (Client Signed By)</relationshipLabel>
    <relationshipName>SignedInterviews</relationshipName>
    <type>Lookup</type>
</CustomField>