tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Clinician_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Not_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Clinician signature was suppressed for this Treatment Plan — the submitter marked Clinician as Not Requested, overriding the normal staff signature requirement.</description>
    <label>Clinician Not Requested</label>
    <type>Checkbox</type>
</CustomField>