tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Completion_Method__c.field-meta.xml
<CustomField>
    <fullName>Completion_Method__c</fullName>
    <description>Records how this interview was completed following EHR completion hierarchy.</description>
    <inlineHelpText>Indicates whether completion was via both signatures, staff signature only, or manual completion without signatures.</inlineHelpText>
    <label>Completion Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both_Signed</fullName>
                <label>Client and Staff Signed</label>
            </value>
            <value>
                <fullName>Staff_Signed_Only</fullName>
                <label>Staff Signature Only</label>
            </value>
            <value>
                <fullName>Completed_Without_Signatures</fullName>
                <label>Manual Completion</label>
            </value>
            <value>
                <fullName>Both Signed</fullName>
                <isActive>false</isActive>
                <label>Both Signed</label>
            </value>
            <value>
                <fullName>Completed Without Signatures</fullName>
                <isActive>false</isActive>
                <label>Completed Without Signatures</label>
            </value>
            <value>
                <fullName>Signed Staff Only</fullName>
                <isActive>false</isActive>
                <label>Signed Staff Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>