tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Consent_Participated__c.field-meta.xml
<CustomField>
    <fullName>Consent_Participated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Participant acknowledged they reviewed and participated in developing this treatment plan.</description>
    <label>Consent Participated</label>
    <type>Checkbox</type>
</CustomField>