tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Date_CaseManager_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_CaseManager_Signed__c</fullName>
    <description>Date and time when the Case Manager signed this interview/treatment plan</description>
    <label>Date Case Manager Signed</label>
    <type>DateTime</type>
</CustomField>