tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Date_Client_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Signed__c</fullName>
    <label>Date Client Signed</label>
    <type>DateTime</type>
</CustomField>