tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Date_PeerSupport_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_PeerSupport_Signed__c</fullName>
    <description>Date and time when the Peer Support signed this interview/treatment plan</description>
    <label>Date Peer Support Signed</label>
    <type>DateTime</type>
</CustomField>