tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Date_Staff_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Staff_Signed__c</fullName>
    <label>Date Staff Signed</label>
    <type>DateTime</type>
</CustomField>