tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Discharge_Plan__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Plan__c</fullName>
    <description>Discharge plan details captured during this treatment plan.</description>
    <label>Discharge Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>