tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Documentation_Offered__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A copy of this treatment plan was offered to the participant.</description>
    <label>Documentation Offered</label>
    <type>Checkbox</type>
</CustomField>