tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Expected_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Discharge_Date__c</fullName>
    <description>The anticipated discharge date captured during this treatment plan.</description>
    <label>Expected Discharge Date</label>
    <type>Date</type>
</CustomField>