tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/InterviewTemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplateVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InterviewTemplateVersion</label>
    <referenceTo>InterviewTemplateVersion__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>