tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Is_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this Treatment Plan Interview was signed as an amendment — i.e., an active Treatment Plan already existed and was outside the 30-day review window when this plan was activated. The existing active plan was superseded by this amendment.</description>
    <inlineHelpText>Checked automatically when this Treatment Plan activates outside the standard review window, superseding a currently active plan.</inlineHelpText>
    <label>Is Amendment</label>
    <type>Checkbox</type>
</CustomField>