tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this interview is locked and cannot be edited (typically 72 hours after completion).</description>
    <inlineHelpText>When locked, this interview requires supervisor approval to amend. Set automatically by scheduled job.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>