tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Last_Amendment_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Amendment_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who made the most recent amendment to this locked interview.</description>
    <label>Last Amendment By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Amended Interviews</relationshipLabel>
    <relationshipName>AmendedInterviews</relationshipName>
    <type>Lookup</type>
</CustomField>