tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Last_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Amendment_Date__c</fullName>
    <description>DateTime of the most recent amendment to this locked interview.</description>
    <label>Last Amendment Date</label>
    <type>DateTime</type>
</CustomField>