tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <description>The date this treatment plan was last reviewed and activated.</description>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>