tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Latest_Document__c.field-meta.xml
<CustomField>
    <fullName>Latest_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Document</label>
    <referenceTo>InterviewDocument__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>