tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Latest_DocumentContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>Latest_DocumentContentVersionId__c</fullName>
    <label>Latest DocumentContentVersionId</label>
    <type>TextArea</type>
</CustomField>