tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who locked this interview (typically SYSTEM for automatic locks).</description>
    <inlineHelpText>Shows which user or system process locked this interview.</inlineHelpText>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Locked Interviews</relationshipLabel>
    <relationshipName>Locked_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>