tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Locked_On__c.field-meta.xml
<CustomField>
    <fullName>Locked_On__c</fullName>
    <description>Timestamp when this interview was locked.</description>
    <inlineHelpText>Date and time when this interview was automatically locked after the 72-hour completion window.</inlineHelpText>
    <label>Locked On</label>
    <type>DateTime</type>
</CustomField>