tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager who needs to approve/co-sign this interview. Auto-populated from the creator&apos;s manager.</description>
    <inlineHelpText>The manager assigned to review and approve this interview.</inlineHelpText>
    <label>Manager Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interviews Requiring Approval</relationshipLabel>
    <relationshipName>Interviews_Requiring_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>