tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Manager_Signature_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Manager_Signature_File_Id__c</fullName>
    <label>Manager Signature File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>