tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Manager_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Manager_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Signed  By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagerSignatures</relationshipName>
    <type>Lookup</type>
</CustomField>