tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Manager_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Signed_Date__c</fullName>
    <description>Date when the manager signed/approved this interview.</description>
    <inlineHelpText>The date manager approved this interview.</inlineHelpText>
    <label>Manager Signed Date</label>
    <type>Date</type>
</CustomField>