tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Next_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Assessment_Date__c</fullName>
    <description>The date when the next Treatment Plan review is due. Populated from the session&apos;s Next Review Date at signing time. Used to determine the 30-day conflict window during activation.</description>
    <inlineHelpText>The scheduled date for the next review of this Treatment Plan.</inlineHelpText>
    <label>Next Assessment Date</label>
    <type>Date</type>
</CustomField>