tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>The scheduled date for the next treatment plan review.</description>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>