tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/PeerSupport_Not_Requested__c.field-meta.xml
<CustomField>
    <fullName>PeerSupport_Not_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Peer Support signature was suppressed for this Treatment Plan — the signing clinician marked Peer Support as Not Requested.</description>
    <label>Peer Support Not Requested</label>
    <type>Checkbox</type>
</CustomField>