tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/PeerSupport_Signature_File_Id__c.field-meta.xml
<CustomField>
    <fullName>PeerSupport_Signature_File_Id__c</fullName>
    <description>Content Document ID of the Peer Support&apos;s signature file</description>
    <label>Peer Support Signature File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>