tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/PeerSupport_Signed__c.field-meta.xml
<CustomField>
    <fullName>PeerSupport_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Peer Support has signed this interview/treatment plan</description>
    <label>Peer Support Signed</label>
    <type>Checkbox</type>
</CustomField>