tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/PeerSupport_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>PeerSupport_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who signed as Peer Support for this interview/treatment plan</description>
    <label>Peer Support Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PeerSupport_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>