tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Staff_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Staff_Completed_At__c</fullName>
    <description>Timestamp when staff clicked Complete button. Used to determine Completed_On when no signatures are required.</description>
    <inlineHelpText>Records when staff manually marked this interview as complete, regardless of signature status.</inlineHelpText>
    <label>Staff Completed At</label>
    <type>DateTime</type>
</CustomField>