tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Staff_Signature_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Staff_Signature_File_Id__c</fullName>
    <description>The Id of the Content Document Link record where the Staff signature image file is stored.</description>
    <label>Staff Signature File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>