tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Staff_Signed__c.field-meta.xml
<CustomField>
    <fullName>Staff_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Signed</label>
    <type>Checkbox</type>
</CustomField>