tgthrProgramManagement/force-app/main/default/objects/Interview__c/fields/Staff_Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Staff_Signed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>